# docs/specs/swagger.yaml
@@ -66,6 +66,42 @@
         }
       }
     },
+    "/api/follows/{followerId}" : {
+      "post" : {
+        "tags" : [ "follow-controller" ],
+        "operationId" : "createFollow",
+        "parameters" : [ {
+          "name" : "followerId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "requestBody" : {
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/FollowRequest"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/FollowResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/users/{id}" : {
       "get" : {
         "tags" : [ "user-controller" ],
@@ -186,6 +222,90 @@
           }
         }
       }
+    },
+    "/api/follows/following/{userId}" : {
+      "get" : {
+        "tags" : [ "follow-controller" ],
+        "operationId" : "getFollowing",
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/FollowResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/follows/followers/{userId}" : {
+      "get" : {
+        "tags" : [ "follow-controller" ],
+        "operationId" : "getFollowers",
+        "parameters" : [ {
+          "name" : "userId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK",
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "type" : "array",
+                  "items" : {
+                    "$ref" : "#/components/schemas/FollowResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/follows/{followerId}/{followedId}" : {
+      "delete" : {
+        "tags" : [ "follow-controller" ],
+        "operationId" : "deleteFollow",
+        "parameters" : [ {
+          "name" : "followerId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "followedId",
+          "in" : "path",
+          "required" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "OK"
+          }
+        }
+      }
     }
   },
   "components" : {
@@ -248,7 +368,7 @@
           },
           "content" : {
             "maxLength" : 280,
-            "minLength" : 1,
+            "minLength" : 0,
             "type" : "string"
           }
         }
@@ -272,6 +392,33 @@
           "like_count" : {
             "type" : "integer",
             "format" : "int64"
+          }
+        }
+      },
+      "FollowRequest" : {
+        "required" : [ "followed_id" ],
+        "type" : "object",
+        "properties" : {
+          "followed_id" : {
+            "type" : "string"
+          }
+        }
+      },
+      "FollowResponse" : {
+        "type" : "object",
+        "properties" : {
+          "id" : {
+            "type" : "string"
+          },
+          "follower_id" : {
+            "type" : "string"
+          },
+          "followed_id" : {
+            "type" : "string"
+          },
+          "created_at" : {
+            "type" : "string",
+            "format" : "date-time"
           }
         }
       },
